# TITA_MJ

./: CMakeLists.txt  MujocoUI.hpp  main.cpp  pixi.toml  prova.py  tita_mj-0.1.0-hb0f4dca_0.conda
include/: DdpSolver.hpp  DesiredConfiguration.hpp  JointCommand.hpp  JointState.hpp  LQR.hpp  MPC.hpp  RobotState.hpp  SE3.hpp  WalkingManager.hpp  WholeBodyController.hpp  utils.hpp
include/labrob_qpsolvers/: HPIPMQPSolver.hpp  QPOASESQPSolver.hpp  QPSolverEigenWrapper.hpp
python_script/: animate_MPC.py  plot_LIP.py  plot_MPC.py  plot_tau.py
src/: JointCommand.cpp  JointState.cpp  MPC.cpp  RobotState.cpp  SE3.cpp  WalkingManager.cpp  WholeBodyController.cpp  pybind_mpc.cpp  pybind_wbc.cpp  utils.cpp  wm.py  wm_binding.cpp
tita_description/: tita.urdf
tita_mj_description/: tita.mjcf  tita_mjx.xml
